[package]
name = "bot-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TWILIGHT
twilight-cache-inmemory = "0.7.0"
twilight-gateway = "0.7.0"
twilight-http = "0.7.0"
twilight-model = "0.7.0"
twilight-util = { version = "0.7.0", features = ["builder"] }

# Others
futures = "0.3.17"
tokio = { version = "1.12.0", features = ["full"] }

dotenv = "0.15.0"

# Cool crate for lazy ppl like me
anyhow = "1.0.43"
