[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
futures = "0.3.5"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
twilight-model = { default-features = false, version = "0.7.1" }
async-trait = "0.1.51"
thiserror = "1.0.30"
# deadpool-redis = "0.10.0"
mobc-redis = "0.7.0"
rmp-serde = "0.15.5"

bitflags = { default-features = false, version = "1" }

log = "0.4.14"
