[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TWILIGHT
twilight-model = "0.7.1"
twilight-http = "0.7.1"
twilight-util = { version = "0.7.0", features = ["builder"] }
twilight-embed-builder = "0.7.1"

# THREAD SAVE HASHMAP AND HASHSET
dashmap = "4.0.2"

log = "0.4.14"

[dev-dependencies]
static_assertions = { default-features = false, version = "1" }
